<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipe Composer</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_section1">Ingredients</string>
    <string name="title_section2">Recipes</string>
    <string name="title_section3">Recipe Favorites</string>
    <!--<string name="keyword_edit_text_hint">Recipe search keywords..</string>-->
    <string name="keyword_edit_text_hint">Search recipes with keywords!</string>
    <string name="clear_query_button">Clear</string>
    <string name="add_ingredient_button">Add Ingredient</string>
    <string name="recipes_empty_list_view">Sorry, couldn\'t find any recipes.</string>
    <string name="recipe_favorites_empty_list_view">Favorite some recipes and view them here!</string>
    <string name="recipes_favorites_empty_list_view">Add some recipes to your favorites!</string>
    <string name="ingredients_empty_list_view">Add some ingredients to get started!</string>
    <string name="ingredients_empty_helper_image">Add an ingredient by clicking the plus! Use the text field at the top to search for recipe by a keyword!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove">Remove</string>
    <string name="action_new_ingredient">Add Ingredient</string>
    <string name="action_search">Search</string>
    <string name="action_create_new_recipe">Create a recipe</string>
    <string name="action_share">Share</string>
    <string name="dialog_add_ingredient_hint">potato</string>
    <string name="ingredient_search">Find existing ingredient..</string>
    <string name="share_intent">Share recipe info to&#8230;</string>
    <string name="recipe_image_view_content_description">Recipe Image</string>
    <string name="ingredient_image_view_content_description">Ingredient Image</string>
    <string name="action_favorite_recipe_content_description">Favorite This Recipe!</string>
    <string name="action_recipe_favorite">Add to favorites</string>
    <string name="action_recipe_remove_favorite">Remove from favorites</string>
    <string name="action_about">About</string>
    <string name="about_dismiss">Dismiss</string>
    <string name="about_app_name_and_version">Recipe Composer, v1.0</string>
    <string name="about_body">
        <![CDATA[
        Recipe Composer was built with a curiosity and passion for making great recipes from simple household ingredients. It is powered by Recipe Puppy: an ingredient based recipe search engine. If you would like more information, follow these delicious links:
        <br><br>
            <b>&bull;&nbsp;&nbsp;<a href="http://www.recipepuppy.com/">Recipe Puppy</a></b>
            <i>Many thanks to Kris Brower, creator of Recipe Puppy</i>
        <br>
            <b>&bull;&nbsp;&nbsp;<a href="https://github.com/icebox-creations/RecipeComposer">Github repository</a></b>
            <i>Source code of the project</i>
        <br><br>
            Libraries and Resources used:
            <b>&bull;&nbsp;&nbsp;<a href="https://johnkil.github.io/Android-RobotoTextView/">Android-RobotoTextView</a></b>
        <br>
            <b>&bull;&nbsp;&nbsp;<a href="http://koush.com/UrlImageViewHelper">UrlImageViewHelper</a></b>
        <br>
            <b>&bull;&nbsp;&nbsp;<a href="http://www.elegantthemes.com/blog/freebie-of-the-week/beautiful-flat-icons-for-free">Elegant Themes Blog</a></b>
        ]]>
    </string>

</resources>
