<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="creations.icebox.recipecomposer.IngredientsFragment" >

    <item
        android:id="@+id/action_new_ingredient"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new_ingredient"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_remove_ingredient"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_remove"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/abc_ic_search"
        android:maxWidth="20dp"
        android:orderInCategory="4"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:orderInCategory="5">
    </item>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="6"
        android:title="@string/action_about">
    </item>

</menu>